zeit.content.article changes
============================

2.3 (unreleased)
----------------

2.2 (2009-07-23)
----------------

- Adapter zur Volltextindizierung hinzugefügt.

- Abhängigkeiten zu anderen Paketen reduziert.

- CDS-Import von Artikeln mit ungültigem Ressort korrigiert, nach dem ungültige
  Ressorts jetzt im CMS angezeigt werden.

2.1 (2009-06-18)
----------------

- Ein Artikel kann eine CenterPage als sein Layout referenzieren (#5491).

- Tests für Hashed-Resources angepasst.

- CDS beim import weniger aggresiv (#5525).
  
- Nicht veröffentlichte CDS-Artikel werden jetzt in der Nacht gelöscht.

2.0 (2009-06-08)
----------------

- Divisions/Seitenumbrüche (#4707).

- TypeGrokker zum registrieren des Artikels verwendet.

1.7.9 (2009-05-28)
------------------

- Abhängigkeiten zu zeit.wysiwyg, zeit.content.infobox,
  zeit.content.portraitbox und zeit.content.gallery hinzugefügt.

1.7.8 (2009-05-27)
------------------

- CDS: Wird ein Artikel ein weiteres mal geliefert, und wurde er im CMS
  geändert, ist dies jetzt eine Warnung und kein Fehler mehr.

1.7.7 (2009-05-20)
------------------

- Aus der CDS importierte Artikel werden beim Veröffentlichen nicht mehr in die
  CDS exportiert.

1.7.6 (2009-05-18)
------------------

- Jetzt wirklich keine eigenen Translationdomain mehr.

1.7.5 (2009-05-18)
------------------

- »Zum Tagesspiegel exportieren« im Workflowtab ist jetzt initial »an«.

1.7.4 (2009-05-17)
------------------

- »Zum Tagesspiegel exportieren« jetzt im Workflowtab.

- Unterstützung für Änderungen aus zeit.cms 1.20.1.

1.7.3 (2009-05-15)
------------------

- Anpassungen für zeit.cms 1.20

- Alle ``test.py`` nach ``tests.py`` umbenannt.

- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

1.7.2 (2009-05-07)
------------------

- Wenn DAV-Propertys aus dem XML geladen werden, werden leere Propertys
  ignoriert. Das löst das "None" bei Autoren.

1.7.1 (2009-05-07)
------------------
